// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scheduler should render correct workspace in Santiago DST for view: Day DST 1`] = `
[
  "1:00 AM",
  "",
  "3:00 AM",
  "",
  "5:00 AM",
  "",
  "7:00 AM",
  "",
  "9:00 AM",
  "",
  "11:00 AM",
  "",
  "1:00 PM",
  "",
  "3:00 PM",
  "",
  "5:00 PM",
  "",
  "7:00 PM",
  "",
  "9:00 PM",
  "",
  "11:00 PM",
  "",
]
`;

exports[`scheduler should render correct workspace in Santiago DST for view: Day before DST 1`] = `
[
  "12:00 AM",
  "",
  "2:00 AM",
  "",
  "4:00 AM",
  "",
  "6:00 AM",
  "",
  "8:00 AM",
  "",
  "10:00 AM",
  "",
  "12:00 PM",
  "",
  "2:00 PM",
  "",
  "4:00 PM",
  "",
  "6:00 PM",
  "",
  "8:00 PM",
  "",
  "10:00 PM",
  "",
]
`;

exports[`scheduler should render correct workspace in Santiago DST for view: Month 1`] = `
[
  "26",
  "27",
  "28",
  "29",
  "30",
  "31",
  "01",
  "02",
  "03",
  "04",
  "05",
  "06",
  "07",
  "08",
  "09",
  "10",
  "11",
  "12",
  "13",
  "14",
  "15",
  "16",
  "17",
  "18",
  "19",
  "20",
  "21",
  "22",
  "23",
  "24",
  "25",
  "26",
  "27",
  "28",
  "29",
  "30",
  "01",
  "02",
  "03",
  "04",
  "05",
  "06",
]
`;

exports[`scheduler should render correct workspace in Santiago DST for view: Month 2`] = `
[
  "Mon",
  "Tue",
  "Wed",
  "Thu",
  "Fri",
  "Sat",
  "Sun",
]
`;

exports[`scheduler should render correct workspace in Santiago DST for view: Month 2 interval 1`] = `
[
  "26",
  "27",
  "28",
  "29",
  "30",
  "31",
  "Sep 1",
  "02",
  "03",
  "04",
  "05",
  "06",
  "07",
  "08",
  "09",
  "10",
  "11",
  "12",
  "13",
  "14",
  "15",
  "16",
  "17",
  "18",
  "19",
  "20",
  "21",
  "22",
  "23",
  "24",
  "25",
  "26",
  "27",
  "28",
  "29",
  "30",
  "Oct 1",
  "02",
  "03",
  "04",
  "05",
  "06",
  "07",
  "08",
  "09",
  "10",
  "11",
  "12",
  "13",
  "14",
  "15",
  "16",
  "17",
  "18",
  "19",
  "20",
  "21",
  "22",
  "23",
  "24",
  "25",
  "26",
  "27",
]
`;

exports[`scheduler should render correct workspace in Santiago DST for view: Month 2 interval 2`] = `
[
  "Mon",
  "Tue",
  "Wed",
  "Thu",
  "Fri",
  "Sat",
  "Sun",
]
`;

exports[`scheduler should render correct workspace in Santiago DST for view: Timeline  Month 1`] = `
[
  "Sun 1",
  "Mon 2",
  "Tue 3",
  "Wed 4",
  "Thu 5",
  "Fri 6",
  "Sat 7",
  "Sun 8",
  "Mon 9",
  "Tue 10",
  "Wed 11",
  "Thu 12",
  "Fri 13",
  "Sat 14",
  "Sun 15",
  "Mon 16",
  "Tue 17",
  "Wed 18",
  "Thu 19",
  "Fri 20",
  "Sat 21",
  "Sun 22",
  "Mon 23",
  "Tue 24",
  "Wed 25",
  "Thu 26",
  "Fri 27",
  "Sat 28",
  "Sun 29",
  "Mon 30",
]
`;

exports[`scheduler should render correct workspace in Santiago DST for view: Timeline Day 1`] = `
[
  "1:00 AM",
  "2:00 AM",
  "3:00 AM",
  "4:00 AM",
  "5:00 AM",
  "6:00 AM",
  "7:00 AM",
  "8:00 AM",
  "9:00 AM",
  "10:00 AM",
  "11:00 AM",
  "12:00 PM",
  "1:00 PM",
  "2:00 PM",
  "3:00 PM",
  "4:00 PM",
  "5:00 PM",
  "6:00 PM",
  "7:00 PM",
  "8:00 PM",
  "9:00 PM",
  "10:00 PM",
  "11:00 PM",
  "12:00 AM",
]
`;

exports[`scheduler should render correct workspace in Santiago DST for view: Timeline Week at Sun 1`] = `
[
  "Sun 8",
  "Mon 9",
  "Tue 10",
  "Wed 11",
  "Thu 12",
  "Fri 13",
  "Sat 14",
  "1:00 AM",
  "7:00 AM",
  "1:00 PM",
  "7:00 PM",
  "1:00 AM",
  "7:00 AM",
  "1:00 PM",
  "7:00 PM",
  "1:00 AM",
  "7:00 AM",
  "1:00 PM",
  "7:00 PM",
  "1:00 AM",
  "7:00 AM",
  "1:00 PM",
  "7:00 PM",
  "1:00 AM",
  "7:00 AM",
  "1:00 PM",
  "7:00 PM",
  "1:00 AM",
  "7:00 AM",
  "1:00 PM",
  "7:00 PM",
  "1:00 AM",
  "7:00 AM",
  "1:00 PM",
  "7:00 PM",
]
`;

exports[`scheduler should render correct workspace in Santiago DST for view: Timeline Work Week at Tue 1`] = `
[
  "Tue 3",
  "Wed 4",
  "Thu 5",
  "Fri 6",
  "Sat 7",
  "12:00 AM",
  "6:00 AM",
  "12:00 PM",
  "6:00 PM",
  "12:00 AM",
  "6:00 AM",
  "12:00 PM",
  "6:00 PM",
  "12:00 AM",
  "6:00 AM",
  "12:00 PM",
  "6:00 PM",
  "12:00 AM",
  "6:00 AM",
  "12:00 PM",
  "6:00 PM",
  "12:00 AM",
  "6:00 AM",
  "12:00 PM",
  "6:00 PM",
]
`;

exports[`scheduler should render correct workspace in Santiago DST for view: Week 1`] = `
[
  "Mon 2",
  "Tue 3",
  "Wed 4",
  "Thu 5",
  "Fri 6",
  "Sat 7",
  "Sun 8",
]
`;

exports[`scheduler should render correct workspace in Santiago DST for view: Week 2`] = `
[
  "12:00 AM",
  "",
  "2:00 AM",
  "",
  "4:00 AM",
  "",
  "6:00 AM",
  "",
  "8:00 AM",
  "",
  "10:00 AM",
  "",
  "12:00 PM",
  "",
  "2:00 PM",
  "",
  "4:00 PM",
  "",
  "6:00 PM",
  "",
  "8:00 PM",
  "",
  "10:00 PM",
  "",
]
`;

exports[`scheduler should render correct workspace in Santiago DST for view: Week started at Sun 1`] = `
[
  "Sun 8",
  "Mon 9",
  "Tue 10",
  "Wed 11",
  "Thu 12",
  "Fri 13",
  "Sat 14",
]
`;

exports[`scheduler should render correct workspace in Santiago DST for view: Week started at Sun 2`] = `
[
  "1:00 AM",
  "",
  "3:00 AM",
  "",
  "5:00 AM",
  "",
  "7:00 AM",
  "",
  "9:00 AM",
  "",
  "11:00 AM",
  "",
  "1:00 PM",
  "",
  "3:00 PM",
  "",
  "5:00 PM",
  "",
  "7:00 PM",
  "",
  "9:00 PM",
  "",
  "11:00 PM",
  "",
]
`;

exports[`scheduler should render correct workspace in Santiago DST for view: Work Week started at Wed 1`] = `
[
  "Wed 4",
  "Thu 5",
  "Fri 6",
  "Mon 9",
  "Tue 10",
  "Wed 11",
  "Thu 12",
  "Fri 13",
  "Mon 16",
  "Tue 17",
]
`;

exports[`scheduler should render correct workspace in Santiago DST for view: Work Week started at Wed 2`] = `
[
  "12:00 AM",
  "",
  "2:00 AM",
  "",
  "4:00 AM",
  "",
  "6:00 AM",
  "",
  "8:00 AM",
  "",
  "10:00 AM",
  "",
  "12:00 PM",
  "",
  "2:00 PM",
  "",
  "4:00 PM",
  "",
  "6:00 PM",
  "",
  "8:00 PM",
  "",
  "10:00 PM",
  "",
]
`;
